[gd_scene load_steps=13 format=3 uid="uid://c8jobqv0u4gu0"]

[ext_resource type="Script" uid="uid://br5rrpdxxs62d" path="res://enemy.gd" id="1_md0e3"]
[ext_resource type="Texture2D" uid="uid://dmm2fqpnfyui4" path="res://medias/character_zombie_sheet.png" id="2_5uy6h"]
[ext_resource type="Texture2D" uid="uid://d3323ax7y5qm4" path="res://medias/fart00.png" id="3_4ra3w"]

[sub_resource type="Animation" id="Animation_xwavj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [37]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Explosion:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Explosion:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_nenq2"]
resource_name = "explode"
length = 0.3875
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [53]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Explosion:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0666667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 1.43333),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_pre_explode"
}, {
"args": [],
"method": &"_die"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Explosion:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.1, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_5uy6h"]
resource_name = "idle"
length = 1.8985
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [47]
}

[sub_resource type="Animation" id="Animation_4ra3w"]
resource_name = "walk"
length = 0.702
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 46, 47]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nenq2"]
_data = {
&"RESET": SubResource("Animation_xwavj"),
&"explode": SubResource("Animation_nenq2"),
&"idle": SubResource("Animation_5uy6h"),
&"walk": SubResource("Animation_4ra3w")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5uy6h"]
size = Vector2(49, 65.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ra3w"]
size = Vector2(42, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c4w8v"]
size = Vector2(6, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xwavj"]
size = Vector2(4, 64.5)

[node name="enemy" type="CharacterBody2D"]
script = ExtResource("1_md0e3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_nenq2")
}
speed_scale = 0.614

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(37, -74)
scale = Vector2(21.55, 12.95)
rect = Rect2(-10, -10, 20.095, 20)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(24, -43)
scale = Vector2(0.822106, 0.822106)
texture = ExtResource("2_5uy6h")
offset = Vector2(0, 0.06)
hframes = 9
vframes = 6
frame = 37

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(24.5, -31.25)
shape = SubResource("RectangleShape2D_5uy6h")

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -28)
target_position = Vector2(0, 85)

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(49, -29)
target_position = Vector2(0, 84)

[node name="Explosion" type="CPUParticles2D" parent="."]
position = Vector2(23, -35)
amount = 35
texture = ExtResource("3_4ra3w")
lifetime = 0.32
one_shot = true
speed_scale = 1.2
explosiveness = 0.76
gravity = Vector2(0, 0)
scale_amount_min = 0.0
scale_amount_max = 0.2

[node name="HitBoxTop" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxTop"]
position = Vector2(26, -67)
shape = SubResource("RectangleShape2D_4ra3w")

[node name="HitBoxBody" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxBody"]
position = Vector2(0, -31)
shape = SubResource("RectangleShape2D_c4w8v")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBoxBody"]
position = Vector2(50, -30.75)
shape = SubResource("RectangleShape2D_xwavj")

[connection signal="body_entered" from="HitBoxTop" to="." method="_on_hit_box_top_body_entered"]
[connection signal="body_entered" from="HitBoxBody" to="." method="_on_hit_box_body_body_entered"]
